[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scenes/Ship/Ball Kinematic.tscn" type="PackedScene" id=1]
[ext_resource path="res://2D/Background Stars.png" type="Texture" id=2]
[ext_resource path="res://2D/Nebula.png" type="Texture" id=3]
[ext_resource path="res://Code/Battle.gd" type="Script" id=4]
[ext_resource path="res://Code/Background.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Ship/Ship kinematic.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/GUI/GUI.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Enemies/Enemy01.tscn" type="PackedScene" id=8]
[ext_resource path="res://Code/Enemy01.gd" type="Script" id=9]

[sub_resource type="Environment" id=1]
background_mode = 1
glow_enabled = true
glow_intensity = 3.08
glow_strength = 0.6
glow_bloom = 0.62
glow_blend_mode = 0

[sub_resource type="BoxShape" id=2]
extents = Vector3( 1, 6.40707, 15.1161 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 27.9229, 7.2044, 1 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 1, 6.4919, 16.0225 )

[sub_resource type="BoxShape" id=5]
extents = Vector3( 25.5242, 6.8995, 1 )

[sub_resource type="BoxShape" id=6]
extents = Vector3( 11.0854, 6.19719, 13.9835 )

[sub_resource type="BoxShape" id=7]
extents = Vector3( 13.2201, 6.38171, 14.023 )

[sub_resource type="Curve3D" id=8]
_data = {
"points": PoolVector3Array( 0, 0, 0, 0, 0, 0, -6.69506, 0, -9.38282, 0, 0, 0, 0, 0, 0, 6.03813, 0, -9.45055, 0, 0, 0, 0, 0, 0, -6.55959, 0, 9.1074, 0, 0, 0, 0, 0, 0, 5.83494, 0, 9.17513, 0, 0, 0, 0, 0, 0, -6.69506, 0, -9.51828 ),
"tilts": PoolRealArray( 0, 0, 0, 0, 0 )
}

[node name="Spatial" type="Spatial"]
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Ship P1" parent="." groups=[
"P1",
] instance=ExtResource( 6 )]
transform = Transform( -1.62921e-07, 0, -1, 0, 1, 0, 1, 0, -1.62921e-07, -15.2863, 0, 0 )
collision_layer = 1025
collision_mask = 1029
outline = Color( 0.0588235, 0.709804, 0.0235294, 1 )
P1 = true

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 17.9512, 0 )

[node name="Ship P2" parent="." groups=[
"P2",
] instance=ExtResource( 6 )]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 14.8591, 0, 0 )
collision_layer = 2
collision_mask = 1026
outline = Color( 0.901961, 0, 0, 1 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 28.6597, 0 )

[node name="Background" type="Node" parent="."]
script = ExtResource( 5 )

[node name="Sky" type="Sprite3D" parent="Background"]
transform = Transform( -1.14044e-06, 7, -4.37114e-08, 0, -3.0598e-07, -1, -7, -1.14044e-06, 7.12149e-15, 0, -1.1, 0 )
modulate = Color( 0.74902, 0.796078, 1, 0.294118 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Clouds" type="Sprite3D" parent="Background"]
transform = Transform( -5.70222e-07, 3.7, -4.37114e-08, 0, -1.61732e-07, -1, -3.5, -6.02807e-07, 7.12149e-15, -0.0995672, -0.647182, 0.000298023 )
modulate = Color( 1, 1, 1, 0.109804 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="clouds" type="Tween" parent="Background"]

[node name="sky" type="Tween" parent="Background"]

[node name="starsopacity" type="Tween" parent="Background"]

[node name="Ball" parent="." instance=ExtResource( 1 )]

[node name="Walls" type="Node" parent="."]

[node name="LEFT" type="StaticBody" parent="Walls" groups=[
"Wall",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -22.8879, 0, 0 )
collision_layer = 1024
collision_mask = 1025

[node name="CollisionShape" type="CollisionShape" parent="Walls/LEFT"]
shape = SubResource( 2 )

[node name="TOP" type="StaticBody" parent="Walls" groups=[
"Wall",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -12.6652 )
collision_layer = 1024
collision_mask = 1025

[node name="CollisionShape" type="CollisionShape" parent="Walls/TOP"]
shape = SubResource( 3 )

[node name="RIGHT" type="StaticBody" parent="Walls" groups=[
"Wall",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 22.5023, 0, 0 )
collision_layer = 1024
collision_mask = 1025

[node name="CollisionShape" type="CollisionShape" parent="Walls/RIGHT"]
shape = SubResource( 4 )

[node name="BOTTOM" type="StaticBody" parent="Walls" groups=[
"Wall",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 12.5604 )
collision_layer = 1024
collision_mask = 1025

[node name="CollisionShape" type="CollisionShape" parent="Walls/BOTTOM"]
shape = SubResource( 5 )

[node name="P1bullets" type="Spatial" parent="."]

[node name="P2bullets" type="Spatial" parent="."]

[node name="GUI" parent="." instance=ExtResource( 7 )]

[node name="Left" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -11.218, 0, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape" type="CollisionShape" parent="Left"]
shape = SubResource( 6 )

[node name="Right" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 13.193, 0, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape" type="CollisionShape" parent="Right"]
shape = SubResource( 7 )

[node name="Enemies" type="Spatial" parent="."]

[node name="Path" type="Path" parent="Enemies"]
curve = SubResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="PathFollow" type="PathFollow" parent="Enemies/Path"]
transform = Transform( 0.967391, 0, -0.253286, 0, 1, 0, 0.253286, 0, 0.967391, -6.69506, 0, -9.38282 )
cubic_interp = false

[node name="Enemy" parent="Enemies/Path/PathFollow" groups=[
"Enemy",
] instance=ExtResource( 8 )]
collision_layer = 32
collision_mask = 3
script = ExtResource( 9 )
[connection signal="tween_completed" from="Background/clouds" to="Background" method="_on_clouds_tween_completed"]
[connection signal="tween_completed" from="Background/sky" to="Background" method="_on_sky_tween_completed"]
[connection signal="tween_completed" from="Background/starsopacity" to="Background" method="_on_starsopacity_tween_completed"]
[connection signal="body_entered" from="Left" to="GUI" method="_on_Left_body_entered"]
[connection signal="body_exited" from="Left" to="GUI" method="_on_Left_body_exited"]
[connection signal="body_entered" from="Right" to="GUI" method="_on_Right_body_entered"]
[connection signal="body_exited" from="Right" to="GUI" method="_on_Right_body_exited"]
